# EverQuint_tasks

./: .gitignore  CIFAR_10_Image_Classification_(TensorFlow) (1).ipynb  LLM_finetune.ipynb  README.md  pyproject.toml  requirements.txt
Multi-Step Reasoning Agent/: .gitignore  PROJECT_EXPLANATION.md
data/text_files/: machine_learning_basics.txt  python_intro.txt
max-profit/: main.py
notebook/: docuement.ipynb  pdf_loader.ipynb
notebook/src/: data_loader.py
src/: app.py
water-tank-visualizer/: README.md  index.html  script.js  style.css
