
[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-community",
    "pypdf",
    "pymupdf",
    "sentence-transformers",
    "faiss-cpu",
    "chromadb",
    "ipykernel>=7.1.0",
    "langchain-groq>=1.1.1",
]
